freebsd-glue (0.2.8) UNRELEASED; urgency=low

  * Correctly setup BSD version of MAKEFLAGS to support parallel builds.
  * Provide legacy symlinks for make and mtree (for now, fmake and
    fmtree).
  * Add wrapper for bmake (force it to use /usr/share/mk-freebsd instead
    of its own /usr/share/mk).

 -- Robert Millan <rmh@debian.org>  Sun, 29 Dec 2013 20:44:42 +0100

freebsd-glue (0.2.7) unstable; urgency=low

  * Remove getpeereid(), use version from libbsd instead.

 -- Robert Millan <rmh@debian.org>  Sun, 29 Dec 2013 00:53:25 +0100

freebsd-glue (0.2.6) unstable; urgency=low

  * Use -O2 for normal build and -Os for udeb build.
  * Use MAKEOBJDIRPREFIX instead of MAKEOBJDIR, so that each library has
    its own object directory.
  * Provide bsd_sendfile() syscall stub, and map sendfile() to it in
    <sys/socket.h>.
  * Convert cget* family of functions into dummy stubs. This gets rid of
    -ldb dependency, which isn't permissible outside of /usr.
    (Closes: #732617)
  * Add getpeereid().

 -- Robert Millan <rmh@debian.org>  Sun, 29 Dec 2013 00:30:03 +0100

freebsd-glue (0.2.5) unstable; urgency=low

  * Include libbsdxml.so in freebsd-glue.
  * Split udeb build into a separate target. Exclude getcap.c from that
    build and its associated -ldb.  (Closes: #731258)

 -- Robert Millan <rmh@debian.org>  Tue, 03 Dec 2013 22:28:21 +0100

freebsd-glue (0.2.4) unstable; urgency=low

  * Remove libutil glue code, depend on the real thing instead.

 -- Robert Millan <rmh@debian.org>  Sun, 01 Dec 2013 12:58:10 +0100

freebsd-glue (0.2.3) unstable; urgency=low

  * Only install *.so symlink for libfreebsd-glue.

 -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 13:08:07 +0100

freebsd-glue (0.2.2) unstable; urgency=low

  * Add strnstr().
  * setfstab: Only fail when file != NULL. Set errno when failing.
  * Provide libbsdxml stubs (for libexpat).

 -- Robert Millan <rmh@debian.org>  Sat, 30 Nov 2013 12:09:03 +0100

freebsd-glue (0.2.1) unstable; urgency=low
